# fileconvertor

./: DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  DETA_DEPLOYMENT.md  KOYEB_DEPLOYMENT.md  KOYEB_TROUBLESHOOTING.md  README.md  Spacefile  app.py  authorized_users.json  bot.py  config.py  file_converter.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txtt  requirements_koyeb.txt  translator.py  utils.py  web_dashboard.py
templates/: base.html  dashboard.html  login.html
