[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "googletrans>=4.0.2",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "pytesseract>=0.3.13",
    "pillow>=11.2.1",
    "docx>=0.2.4",
    "wtforms>=3.2.1",
    "telegram>=0.0.1",
    "python-telegram-bot==13.15",
]
